#25 CSS-fixes and overflow: hidden only during switcher flip (might solve Android scroll issue).

--- a/plugins/LayerSwitcher/LayerSwitcher.css
+++ b/plugins/LayerSwitcher/LayerSwitcher.css
@@ -42,7 +42,7 @@
 	-moz-box-shadow: inset #000 -3px 0px 17px;
 	box-shadow: inset #000 -3px 0px 17px;
 	-webkit-box-shadow: inset #000 -3px 0px 17px;
-	overflow-y: auto;
+	overflow: auto;
 }
 
 .lswitch-panel a {
